added categories + removed all junk files

--- a/aggregator/templates/aggregator/home.html
+++ b/aggregator/templates/aggregator/home.html
@@ -1,6 +1,7 @@
 {% extends 'aggregator/layout.html' %}
 {% block content%}
 
+  <a class="nav-item nav-link" href="{% url 'aggregator-cat_func' %}">Categories</a>
   <a class="nav-item nav-link" href="{% url 'aggregator-about' %}">About</a>
   <a class="nav-item nav-link" href="{% url 'aggregator-agg_func' %}">Agg</a>
   <h1>HOME!</h1>
