Implementation of plots

--- a/aggregator/templates/aggregator/wallets.html
+++ b/aggregator/templates/aggregator/wallets.html
@@ -24,5 +24,5 @@
 
     {% endfor %}
   </table>
-
+  <a class="nav-item nav-link" href="{% url 'aggregator-wallets_list'%}?value=10000 ">Load all wallets</a> 
 {% endblock %}
