--- a/aggregator/templates/aggregator/home.html
+++ b/aggregator/templates/aggregator/home.html
@@ -11,7 +11,7 @@
     <a class="nav-item nav-link" href="{% url 'aggregator-cat_func' %}">Categories</a>
     <!-- <a class="nav-item nav-link" href="{% url 'aggregator-about' %}">About</a> -->
     <a class="nav-item nav-link" href="{% url 'aggregator-agg_func' %}">Agg</a>
-    <a class="nav-item nav-link" href="{% url 'aggregator-wallets_list' %}">All wallets</a>
+    <a class="nav-item nav-link" href="{% url 'aggregator-wallets_list' %}?value=1000">All wallets</a>
 
   </div>
 
