--- a/aggregator/templates/aggregator/about.html
+++ b/aggregator/templates/aggregator/about.html
@@ -24,7 +24,7 @@
     </p>
 
     <p>Once, I figured out how to scrape data from the website I started
-    to overload their servers daily for at least 1.5 - 2 hours with tens of
+    to overload bitinfocharts servers daily for at least 1.5 - 2 hours, with tens of
     thousands of unnecessary requests. I took a while for them to respond to my
     nasty behaviour but nevertheless, my IP address got banned. At first, I got
      really upset when I figured out what error 403 means. But this is how I got
@@ -35,9 +35,9 @@
 
     <p>Long story short, the creation of this project spread over
     a couple of years due to me burning out over and over again as well
-    as due to doing other projects, pursuing my bachelor's degree in
+    as due to doing other projects, pursuing my bachelor's degree at
      the Uni and of course procrastinating mercilessly. In the end, I
-     had to re-wright 85 % of the code to make match it with the new
+     had to re-write 85 % of the code to make it match with the new
       skills I have obtained over the years.
     </p>
 
