--- a/aggregator/templates/aggregator/about_dark.html
+++ b/aggregator/templates/aggregator/about_dark.html
@@ -1,48 +1,49 @@
 {% extends 'aggregator/layout_dark.html' %}
 {% block content%}
 
-<div class="about">
-  <h3 style="text-color: #e1c4b6; text-align: center; font-weight: bold">The story behind wallagg.com</h3>
-  <p>After compleating the python "Bootcamp" I was
-  incentivised to make a project to continue my development as a
-  programmer. The tutor was specific about one thing - that you have
-  to be genuinely interested in the project you are about to build, therefore
-  you will get the drive and motivation to finish it. Well, it so happened that
-  I was into cryptocurrencies at that time (still am) and I stumbled across this
-   website bitinfocharts.com. The idea for a project was born - to aggregate and
-    process data from the website so that I could have a unique set of information
-    available only to myself in order to maybe find some correlations between this
-    information and BTC price movements.
-  </p>
-  <p>Some peoples first projects are to replicate the snake
-   game or make an app to sort their files. I didn't realise what
-   I got myself into! I had no knowledge about databases, web scraping
-   or web development. I didn't know anything about the libraries that I
-   should have used and to be honest, I didn't quite understand the concepts
-   of libraries or frameworks.
-  </p>
 
-  <p>Once, I figured out how to scrape data from the website I started
-  to overload their servers daily for at least 1.5 - 2 hours with tens of
-  thousands of unnecessary requests. I took a while for them to respond to my
-  nasty behaviour but nevertheless, my IP address got banned. At first, I got
-   really upset when I figured out what error 403 means. But this is how I got
-   introduced to the wonderful world of VPNs and so I continued to misbehave.
-    In the end, they were forced to address the situation more seriously and
-     introduced a captcha - and hence ending my efforts (for a time being).
-  </p>
+  <div class="about">
+    <h3 style="text-color: #e1c4b6; text-align: center; font-weight: bold">The story behind wallagg.com</h3>
+    <p>After compleating the python "Bootcamp" I was
+    incentivised to make a project to continue my development as a
+    programmer. The tutor was specific about one thing - that you have
+    to be genuinely interested in the project you are about to build, therefore
+    you will get the drive and motivation to finish it. Well, it so happened that
+    I was into cryptocurrencies at that time (still am) and I stumbled across this
+     website bitinfocharts.com. The idea for a project was born - to aggregate and
+      process data from the website so that I could have a unique set of information
+      available only to myself in order to maybe find some correlations between this
+      information and BTC price movements.
+    </p>
+    <p>Some peoples first projects are to replicate the snake
+     game or make an app to sort their files. I didn't realise what
+     I got myself into! I had no knowledge about databases, web scraping
+     or web development. I didn't know anything about the libraries that I
+     should have used and to be honest, I didn't quite understand the concepts
+     of libraries or frameworks.
+    </p>
 
-  <p>Long story short, the creation of this project spread over
-  a couple of years due to me burning out over and over again as well
-  as due to doing other projects, pursuing my bachelor's degree in
-   the Uni and of course procrastinating mercilessly. In the end, I
-   had to re-wright 85 % of the code to make match it with the new
-    skills I have obtained over the years.
-  </p>
+    <p>Once, I figured out how to scrape data from the website I started
+    to overload bitinfocharts servers daily for at least 1.5 - 2 hours, with tens of
+    thousands of unnecessary requests. I took a while for them to respond to my
+    nasty behaviour but nevertheless, my IP address got banned. At first, I got
+     really upset when I figured out what error 403 means. But this is how I got
+     introduced to the wonderful world of VPNs and so I continued to misbehave.
+      In the end, they were forced to address the situation more seriously and
+       introduced a captcha - and hence ending my efforts (for a time being).
+    </p>
 
-  <p>I am planning to support this project and adding new features and plots. </p>
+    <p>Long story short, the creation of this project spread over
+    a couple of years due to me burning out over and over again as well
+    as due to doing other projects, pursuing my bachelor's degree at
+     the Uni and of course procrastinating mercilessly. In the end, I
+     had to re-write 85 % of the code to make it match with the new
+      skills I have obtained over the years.
+    </p>
 
-  <p>For any enquiries please contact me on almondiris@gmail.com</p>
-</div>
+    <p>I am planning to support this project and adding new features and plots. </p>
 
-{% endblock %}
+    <p>For any enquiries please contact me on almondiris@gmail.com</p>
+  </div>
+
+  {% endblock %}
